--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="home.css">
+    <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
     <script type="text/javascript" src="script.js" defer></script>
     <title>Vineyard Philippines</title>
@@ -21,7 +21,7 @@
                         <path
                             d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z" />
                     </svg></a></li>
-            <li><a href="home.html">Home</a></li>
+            <li><a href="index.css">Home</a></li>
             <li><a href="programs.html">Programs</a></li>
             <li class="dropdown">
                 <a href="about.html">About Us</a>
