--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                         <path
                             d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z" />
                     </svg></a></li>
-            <li><a href="index.css">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="programs.html">Programs</a></li>
             <li class="dropdown">
                 <a href="about.html">About Us</a>
