--- a/programs.html
+++ b/programs.html
@@ -33,8 +33,8 @@
 
         <ul>
             <img src="Resources/logo.jpg" alt="">
-            <li class="header"><a href="home.html">VINEYARD</a></li>
-            <li class="showOnPc"><a href="home.html">Home</a></li>
+            <li class="header"><a href="index.html">VINEYARD</a></li>
+            <li class="showOnPc"><a href="index.html">Home</a></li>
             <li class="showOnPc"><a href="programs.html">Programs</a></li>
             <li class="dropdown">
                 <a class="showOnPc" href="about.html">About Us</a>
